Адаптивность шапки, футера (доделано). Адаптивность колонки. Адаптивность шрифтов (проверить).

--- a/app/index.html
+++ b/app/index.html
@@ -989,7 +989,18 @@
                         </div>
                         <div class="items">
                             <div class="item">
-                                <a href="#" class="text">
+                                <div class="item-info">
+                                    <span class="date">8 мин. назад</span>
+                                    <div class="answers">
+                                        <i class="fa fa-thumbs-o-up"></i>
+                                        <span class="count">0</span>
+                                    </div>
+                                    <div class="views">
+                                        <i class="fa fa-eye"></i>
+                                        <span class="count">121 334</span>
+                                    </div>
+                                </div>
+                                <a href="#">
                                     <img src="/img/uploads/statya-1-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
@@ -998,21 +1009,21 @@
                                         рычагов на автомобилях ВАЗ-2101, ВАЗ-2102, ВАЗ-2103,
                                         ВАЗ-2104, ВАЗ-2105, ВАЗ-2106, ВАЗ-2107
                                     </a>
-                                    <div class="item-info">
-                                        <span class="date">8 мин. назад</span>
-                                        <div class="answers">
-                                            <i class="fa fa-thumbs-o-up"></i>
-                                            <span class="count">0</span>
-                                        </div>
-                                        <div class="views">
-                                            <i class="fa fa-eye"></i>
-                                            <span class="count">34</span>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                             <div class="item">
-                                <a href="#" class="text">
+                                <div class="item-info">
+                                    <span class="date">Сегодня в 18:23</span>
+                                    <div class="answers active">
+                                        <i class="fa fa-thumbs-up"></i>
+                                        <span class="count">1</span>
+                                    </div>
+                                    <div class="views">
+                                        <i class="fa fa-eye"></i>
+                                        <span class="count">122 443</span>
+                                    </div>
+                                </div>
+                                <a href="#">
                                     <img src="/img/uploads/statya-2-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
@@ -1020,21 +1031,21 @@
                                         Замена охлаждающей жидкости (антифриза или тосола)
                                         в автомобиле ВАЗ-2101, ВАЗ-2104, ВАЗ-2105, ВАЗ-2106, ВАЗ-2107
                                     </a>
-                                    <div class="item-info" class="item-image">
-                                        <span class="date">Сегодня в 18:23</span>
-                                        <div class="answers active">
-                                            <i class="fa fa-thumbs-up"></i>
-                                            <span class="count">0</span>
-                                        </div>
-                                        <div class="views">
-                                            <i class="fa fa-eye"></i>
-                                            <span class="count">2 443</span>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                             <div class="item">
-                                <a href="#" class="text">
+                                <div class="item-info">
+                                    <span class="date">15 августа</span>
+                                    <div class="answers">
+                                        <i class="fa fa-thumbs-o-up"></i>
+                                        <span class="count">122 657</span>
+                                    </div>
+                                    <div class="views">
+                                        <i class="fa fa-eye"></i>
+                                        <span class="count">32 453</span>
+                                    </div>
+                                </div>
+                                <a href="#">
                                     <img src="/img/uploads/statya-3-mini.png" alt="" class="item-image">
                                 </a>
                                 <div class="item-content">
@@ -1042,17 +1053,6 @@
                                         Замена радиатора печки на автомобиле ВАЗ-2101,
                                         ВАЗ-2102, ВАЗ-2106, ВАЗ-2107
                                     </a>
-                                    <div class="item-info">
-                                        <span class="date">15 августа</span>
-                                        <div class="answers">
-                                            <i class="fa fa-thumbs-o-up"></i>
-                                            <span class="count">2 657</span>
-                                        </div>
-                                        <div class="views">
-                                            <i class="fa fa-eye"></i>
-                                            <span class="count">32 453</span>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1242,10 +1242,10 @@
                     <div class="col-lg-3 col-md-4 col-sm-12">
                         <div class="first-column">
                             <div class="row">
-                                <div class="full-xxs col-xs-12 col-sm-5 col-md-12">
+                                <div class="full-xxs col-xs-6 col-sm-5 col-md-12">
                                     <img src="/img/logo-white.svg" alt="Avtorem.info" class="logo">
                                 </div>
-                                <div class="full-xxs col-xs-12 col-sm-7 col-md-12">
+                                <div class="full-xxs col-xs-6 col-sm-7 col-md-12">
                                     <div class="copyright">
                                         При использовании авторских статей
                                         ссылка на сайт обязательна.
