Адаптивность статей в блоге (js для обрезки текста).

--- a/app/index.html
+++ b/app/index.html
@@ -586,24 +586,32 @@
                                     </div>
                                 </div>
                                 <div class="item article">
-                                    <div class="item-image">
-                                        <img src="/img/uploads/articles/statya-3.png" alt="">
-                                    </div>
-                                    <div class="text item-text">
-                                        <h3>
+                                    <!--<div class="item-content">-->
+                                        <h3 class="item-title">
                                             <a href="#">
                                                 Замена переднего сайлентблока рычага передней подвески
                                                 автомобилей Daewoo Lanos, Daewoo Nexia, Chevrolet Lanos, Daewoo Sens
                                             </a>
                                         </h3>
-                                        <p>
-                                            Эта  статья-фотоотчёт, можно сказать, плавно вытекает из материала,
-                                            ранее опубликованного на сайте. А, именно, из статьи по замене рычага передней
-                                            подвески на автомобилях Дэу Ланос, Нексия, Сенс и Шевроле Ланос.
-                                            Так как чаще всего рычаг снимают с автомобиля не для замены на ...
-                                            <a href="#">Читать далее...</a>
-                                        </p>
-                                    </div>
+                                        <div class="item-image">
+                                            <img src="/img/uploads/articles/statya-3.jpg" alt="">
+                                        </div>
+                                        <div class="text item-text">
+                                            <p>
+                                                Эта  статья-фотоотчёт, можно сказать, плавно вытекает из
+                                                материала, ранее опубликованного на сайте. А, именно, из
+                                                статьи по замене рычага передней подвески на автомобилях
+                                                Дэу Ланос, Нексия, Сенс и Шевроле Ланос. Так как чаще всего
+                                                рычаг снимают с автомобиля не для замены на новый, а для
+                                                замены переднего сайлентблока. А этот самый сайлентблок не
+                                                так прост, как его напарник - задний сайлентблок (задняя
+                                                подушка рычага). Те автолюбители, которые уже имели счастье
+                                                своими руками монтировать передний сайлентблок, думаю,
+                                                согласятся со мной, если я скажу, что эта работа может отнять...
+                                            </p>
+                                            <a href="#" class="read-more">Читать далее</a>
+                                        </div>
+                                    <!--</div>-->
                                     <div class="item-info">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
@@ -652,27 +660,33 @@
                                     </div>
                                 </div>
                                 <div class="item article">
-                                    <div class="item-image">
-                                        <img src="/img/uploads/articles/statya-2.png" alt="">
-                                    </div>
-                                    <div class="text item-text">
-                                        <h3>
+                                    <!--<div class="item-content">-->
+                                        <h3 class="item-title">
                                             <a href="#">
                                                 Замена рычага передней подвески на автомобиле Daewoo Lanos,
                                                 Daewoo Nexia, Chevrolet Lanos, Daewoo Sens
                                             </a>
                                         </h3>
-                                        <p>
-                                            Уважаемые Ланосоводы и Нексияведы, не проходите мимо!
-                                            Приглашаю Вас ознакомиться и оценить мой фотоотчёт по снятию
-                                            и замене рычага передней подвески автомобилей
-                                            Daewoo Lanos (Дэу Ланос), Daewoo Nexia (Дэу Нексия),
-                                            Chevrolet Lanos (Шевроле Ланос), Daewoo Sens (Дэу Сенс).
-                                            Надеюсь, что этот материал будет Вам интересен.
-                                            Так как в нём описывается не только сам процесс замены рычага, но и ...
-                                            <a href="#">Читать далее...</a>
-                                        </p>
-                                    </div>
+                                        <div class="item-image">
+                                            <img src="/img/uploads/articles/statya-2.jpg" alt="">
+                                        </div>
+                                        <div class="text item-text">
+                                            <p>
+                                                Уважаемые Ланосоводы и Нексияведы, не проходите мимо!
+                                                Приглашаю Вас ознакомиться и оценить мой фотоотчёт по
+                                                снятию и замене рычага передней подвески автомобилей
+                                                Daewoo Lanos (Дэу Ланос), Daewoo Nexia (Дэу Нексия),
+                                                Chevrolet Lanos (Шевроле Ланос), Daewoo Sens (Дэу Сенс).
+                                                Надеюсь, что этот материал будет Вам интересен. Так как
+                                                в нём описывается не только сам процесс замены рычага,
+                                                но и даны советы по выбору качественных запчастей. А в
+                                                наше время это немало важно, так как покупка рычага низкого
+                                                качества влечёт за собой довольно большие проблемы. Но,
+                                                обо всём по порядку...
+                                            </p>
+                                            <a href="#" class="read-more">Читать далее</a>
+                                        </div>
+                                    <!--</div>-->
                                     <div class="item-info">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
@@ -721,24 +735,30 @@
                                     </div>
                                 </div>
                                 <div class="item article">
-                                    <div class="item-image">
-                                        <img src="/img/uploads/articles/statya-1.png" alt="">
-                                    </div>
-                                    <div class="text item-text">
-                                        <h3>
+                                    <!--<div class="item-content">-->
+                                        <h3 class="item-title">
                                             <a href="#">Ремонт ключа трещотки своими руками</a>
                                         </h3>
-                                        <p>
-                                            Я думаю, что у каждого автолюбителя, автомастера, электрика,
-                                            сантехника есть свой любимый инструмент, который сделан именно
-                                            под его руку и безотказно служит уже не один год. Когда такой
-                                            инструмент (ключ, отвёртка, пассатижи, молоток и т.д.) ломается,
-                                            приходит в негодность, то настроение от такого события резко
-                                            ухудшается. Тут тебе и потеря верного соратника, и дополнительные
-                                            финансовые траты...
-                                            <a href="#">Читать далее...</a>
-                                        </p>
-                                    </div>
+                                        <div class="item-image">
+                                            <img src="/img/uploads/articles/statya-1.jpg" alt="">
+                                        </div>
+                                        <div class="text item-text">
+                                            <p>
+                                                Я думаю, что у каждого автолюбителя, автомастера,
+                                                электрика, сантехника есть свой любимый инструмент,
+                                                который сделан именно под его руку и безотказно
+                                                служит уже не один год. Когда такой инструмент (ключ,
+                                                отвёртка, пассатижи, молоток и т.д.) ломается, приходит
+                                                в негодность, то настроение от такого события резко
+                                                ухудшается. Тут тебе и потеря верного соратника, и
+                                                дополнительные финансовые траты... Знакомо? Так, например,
+                                                было и со мной. В один прекрасный день, любимый ключ
+                                                трещотка фирмы TOPTUL сломался. По началу, правда, думал,
+                                                что ничего серьёзного. Так как ключ не первый день...
+                                            </p>
+                                            <a href="#" class="read-more">Читать далее</a>
+                                        </div>
+                                    <!--</div>-->
                                     <div class="item-info">
                                         <div class="page-info">
                                             <div class="user" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
